fix stretch

--- a/RF-NT-Template 1/css/style.css
+++ b/RF-NT-Template 1/css/style.css
@@ -114,7 +114,7 @@ body {
   width: 100%;
   max-width: 512px;
   height: auto;
-  max-height: 512px;
+  max-height: 200px;
   margin: auto;
   object-fit: contain;
 }
